fixed misaligned text

--- a/src/modules/template/Module.css
+++ b/src/modules/template/Module.css
@@ -159,7 +159,7 @@
         text-align: center;   
     }
 
-    .anyModuleContent p{
+    .downloading {
         text-align: center;
     }
 
